--- a/ingresso-ng/src/app/pages/movie-form/edit-movie/edit-movie.component.html
+++ b/ingresso-ng/src/app/pages/movie-form/edit-movie/edit-movie.component.html
@@ -1,1 +1,1 @@
-<app-movie-form [editMode]="true"></app-movie-form>
+<app-movie-form [editMode]="true" [filmeId]="filmeId" (submitForm)="edit($event)"></app-movie-form>
