--- a/ingresso-ng/src/app/pages/user-form/user-form.component.html
+++ b/ingresso-ng/src/app/pages/user-form/user-form.component.html
@@ -11,7 +11,7 @@
                     <input type="text" placeholder="Nome completo" name="name" class="form-control rounded-0" formControlName="nome" />
                 </div>
                 <div class="form-group">
-                    <input type="date" placeholder="Data de nascimento" name="birth_date" class="form-control rounded-0" formControlName="dataNascimento" />
+                    <input type="date" placeholder="Data de nascimento" name="birth_date" class="form-control rounded-0" formControlName="data_nascimento" />
                 </div>
                 <div class="form-group">
                     <input type="text" placeholder="Endereço" name="address" class="form-control rounded-0" formControlName="endereco"/>
