--- a/ingresso-ng/src/app/pages/movie-form/movie-form.component.html
+++ b/ingresso-ng/src/app/pages/movie-form/movie-form.component.html
@@ -24,12 +24,12 @@
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Ano" name="year" class="form-control rounded-0" formControlName="ano" />
+                            <input type="number" placeholder="Ano" name="year" class="form-control rounded-0" formControlName="ano" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Duração" name="duration" class="form-control rounded-0" formControlName="duracao" />
+                            <input type="number" placeholder="Duração" name="duration" class="form-control rounded-0" formControlName="duracao" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
@@ -70,14 +70,21 @@
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Classificação etária" name="Advisory-rating" class="form-control rounded-0" formControlName="classificacao" />
+                            <input type="number" placeholder="Classificação etária" name="Advisory-rating" class="form-control rounded-0" formControlName="classificacao" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="IMDB" name="imdb" class="form-control rounded-0" formControlName="imdb" />
+                            <input type="number" placeholder="IMDB" name="imdb" class="form-control rounded-0" formControlName="imdb" />
                         </div>
                     </div>
+                    <div class="col-12 col-md-6 pr-md-5">
+                        <div class="form-group">
+                            <input type="checkbox" class=" rounded-0" id="em_cartaz" name="imdb" formControlName="em_cartaz">
+                            <label class="form-check-label" for="em_cartaz">Em cartaz</label>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 pl-md-5"></div>
                 </section>
                 <section class="row justify-content-center">
                     <div class="col-12">
