--- a/ingresso-ng/src/app/pages/session-form/session-form.component.html
+++ b/ingresso-ng/src/app/pages/session-form/session-form.component.html
@@ -16,9 +16,7 @@
                         <div class="form-group">
                             <select class="form-control rounded-0" name="movie" formControlName="filme_id">
                                 <option value="">Selecione o filme</option>
-                                <optgroup label="A">
-                                    <option value="10">Star wars</option>
-                                </optgroup>
+                                <option [value]="filme.id" *ngFor="let filme of filmes">{{ filme.titulo  }}</option>
                             </select>
                         </div>
                     </div>
@@ -26,7 +24,7 @@
                         <div class="form-group">
                             <select class="form-control rounded-0" name="room" formControlName="sala_id">
                                 <option value="">Selecione a sala</option>
-                                <option value="10">2D</option>
+                                <option [value]="sala.id" *ngFor="let sala of salas">{{ sala.nome }}</option>
                             </select>
                         </div>
                     </div>
@@ -34,15 +32,17 @@
                         <div class="form-group">
                             <select class="form-control rounded-0" name="format" formControlName="formato">
                                 <option value="">Selecione o formato (Ex.: 2D)</option>
-                                <option value="10">2D</option>
+                                <option value="2D">2D</option>
+                                <option value="3D">3D</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
                             <select class="form-control rounded-0" name="dub" formControlName="dublado">
-                                <option value="">Dublado</option>
-                                <option value="10">Legendado</option>
+                                <option value="">Selecione a legenda</option>
+                                <option [value]="1">Dublado</option>
+                                <option [value]="0">Legendado</option>
                             </select>
                         </div>
                     </div>
