AJUSTANDO AS CAGADAS DOO LEO

--- a/ingresso-ng/src/app/components/footer/footer.component.html
+++ b/ingresso-ng/src/app/components/footer/footer.component.html
@@ -2,25 +2,25 @@
     <div class="col-2 pb-3 text-center border-bottom border-white">
         <a routerLink="#">
             <img src="assets/icons/facebook-white.svg" width="32" height="32"/>
-            <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
+            <p class="d-inline-block text-white font-weight-bold">/SeuCine.OFICIAL</p>
         </a>
     </div>
     <div class="col-2 pb-3 text-center border-bottom border-white">
         <a routerLink="#">
             <img src="assets/icons/twitter-white.svg" width="32" height="32"/>
-            <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
+            <p class="d-inline-block text-white font-weight-bold">/SeuCine.OFICIAL</p>
         </a>
     </div>
     <div class="col-2 pb-3 text-center border-bottom border-white">
         <a routerLink="#">
             <img src="assets/icons/instagram-white.svg" width="32" height="32"/>
-            <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
+            <p class="d-inline-block text-white font-weight-bold">/SeuCine.OFICIAL</p>
         </a>
     </div>
     <div class="col-2 pb-3 text-center border-bottom border-white">
         <a routerLink="#">
             <img src="assets/icons/linkedin-white.svg" width="32" height="32"/>
-            <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
+            <p class="d-inline-block text-white font-weight-bold">/SeuCine.OFICIAL</p>
         </a>
     </div>
 </section>
@@ -58,6 +58,6 @@
 </section>
 <section class="row pb-2">
     <div class="col-12">
-        <p class="m-0 text-center text-white">Copyright &copy; 2020 Cine.com</p>
+        <p class="m-0 text-center text-white">Copyright &copy; 2020 SeuCine.com</p>
     </div>
 </section>
