--- a/ingresso-ng/src/app/components/navbar/navbar.component.html
+++ b/ingresso-ng/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light shadow-sm navbar-expand-lg bg-35363A">
     <a routerLink="#" class="navbar-brand">
         <div>
-            <img src="assets/icons/logo.svg" width="48" height="48"/> <span class="font-arvo font-weight-bold text-white">SeuCine.org</span>
+            <img src="assets/icons/logo.svg" width="48" height="48"/> <span class="font-arvo font-weight-bold text-white">SeuCine.com</span>
         </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
