--- a/ingresso-ng/src/app/pages/login/login.component.html
+++ b/ingresso-ng/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-12 col-sm-12 col-md-4 order-1 order-md-2 px-3 pb-2 pt-1 section-divider-left">
             <form [formGroup]="formGroup" (submit)="submit()">
-                <h4>Entre agora com seu Cine.com</h4>
+                <h4>Entre agora com seu SeuCine.com</h4>
                 <div class="form-group my-4">
                     <input type="text" class="form-control rounded-0" placeholder="E-mail" formControlName="email" />
                 </div>
