--- a/ingresso-ng/src/app/pages/movie-detail/movie-detail.component.html
+++ b/ingresso-ng/src/app/pages/movie-detail/movie-detail.component.html
@@ -42,7 +42,7 @@
 
             <div class="row justify-content-center align-items-center p-2">
                 <div class="col-1 text-center">
-                    <img src="assets/icons/cinema-red.svg" alt="" width="48" class="mx-2" />
+                    <img src="assets/icons/SeuCinema-red.svg" alt="" width="48" class="mx-2" />
                 </div>
                 <div class="col-4">
                     <p class="d-inline-block m-0"><span class="font-weight-bold">Direção: </span>{{ movie.diretor }}</p>
