--- a/ingresso-ng/src/app/pages/ticket-type-form/ticket-type-form.component.html
+++ b/ingresso-ng/src/app/pages/ticket-type-form/ticket-type-form.component.html
@@ -29,7 +29,9 @@
                 </section>
                 <section class="row justify-content-center py-3">
                     <div class="col-12">
-                        <button type="submit" class="btn w-100 raised-button">Adicionar tipo do ingresso</button>
+                        <button type="submit" class="btn w-100 raised-button"*ngIf="!ingressoId">Adicionar tipo do ingresso</button>
+                        <button type="submit" class="btn w-100 raised-button" (click)="update()"*ngIf="ingressoId" >Editar Ingresso</button>
+                            <button type="submit" class="btn w-100 raised-button" (click)="delete()" *ngIf="ingressoId">Deletar Ingresso</button>
                     </div>
                 </section>
             </form>
