--- a/ingresso-ng/src/app/pages/user-form/user-form.component.html
+++ b/ingresso-ng/src/app/pages/user-form/user-form.component.html
@@ -3,7 +3,7 @@
         <section class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h4 class="py-2">Cadastre-se</h4>
-                <h6 class="subtitle">O cine.com tem diversos benefícios para deixar tudo mais fácil. Preencha os dados abaixo ou faça login com sua rede social favorita.</h6>
+                <h6 class="subtitle">O SeuCine.com tem diversos benefícios para deixar tudo mais fácil. Preencha os dados abaixo ou faça login com sua rede social favorita.</h6>
             </div>
             <div class="w-100"></div>
             <div class="col-12 col-md-4 pr-md-5">
