--- a/ingresso-ng/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/ingresso-ng/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -12,13 +12,13 @@
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/list-movie">Filmes em cartaz</a>
                 <span class="border-top"></span>
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/create-session">Nova sessão</a>
-                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="#">Ver estado das sessões</a>
+                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/edit-session/1">Ver estado das sessões</a>
                 <span class="border-top"></span>
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/create-movie-room">Nova sala</a>
-                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="#">Lista de salas</a>
+                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/edit-movie-room/1">Lista de salas</a>
                 <span class="border-top"></span>
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/create-ticket-type">Novo tipo de ingresso</a>
-                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="#">Lista de ingressos</a>
+                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/edit-ticket-type/1">Lista de ingressos</a>
             </nav>
         </div>
     </div>
