--- a/ingresso-ng/src/app/pages/movie-form/movie-form.component.html
+++ b/ingresso-ng/src/app/pages/movie-form/movie-form.component.html
@@ -1,4 +1,3 @@
-
 <main class="container-fluid">
     <section class="row py-2">
         <div class="col-3">
@@ -10,116 +9,97 @@
                     <div class="col-12">
                         <h4 class="py-2">Novo filme</h4>
                         <h6 class="subtitle font-weight-bold">Sobre o filme</h6>
-                    </div> 
+                    </div>
                     <div class="w-100"></div>
                     <div class="col-12">
                         <div class="form-group">
-                            <input type="text" placeholder="Titulo do filme" name="title" class="form-control rounded-0" formControlName="titulo" />
+                            <input type="text" placeholder="Titulo do filme" name="title" class="form-control rounded-0"
+                                formControlName="titulo" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="date" placeholder="Data de lançamento" name="release_date" class="form-control rounded-0" formControlName="data_lancamento" />
+                            <input type="date" placeholder="Data de lançamento" name="release_date"
+                                class="form-control rounded-0" formControlName="data_lancamento" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="number" placeholder="Ano" name="year" class="form-control rounded-0" formControlName="ano" />
+                            <input type="number" placeholder="Ano" name="year" class="form-control rounded-0"
+                                formControlName="ano" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="number" placeholder="Duração" name="duration" class="form-control rounded-0" formControlName="duracao" />
+                            <input type="number" placeholder="Duração" name="duration" class="form-control rounded-0"
+                                formControlName="duracao" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Genêro" name="gender" class="form-control rounded-0" formControlName="genero" />
+                            <input type="text" placeholder="Genêro" name="gender" class="form-control rounded-0"
+                                formControlName="genero" />
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <textarea type="text" placeholder="Sinopse" name="sinopse" class="form-control rounded-0" rows="4" formControlName="sinopse" ></textarea>
+                            <textarea type="text" placeholder="Sinopse" name="sinopse" class="form-control rounded-0"
+                                rows="4" formControlName="sinopse"></textarea>
                         </div>
                     </div>
                 </section>
                 <section class="row justify-content-center">
                     <div class="col-12">
                         <h6 class="subtitle font-weight-bold">Sobre o elenco</h6>
-                    </div> 
+                    </div>
                     <div class="w-100"></div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Diretor" name="director" class="form-control rounded-0" formControlName="diretor" />
+                            <input type="text" placeholder="Diretor" name="director" class="form-control rounded-0"
+                                formControlName="diretor" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Ator" name="actor" class="form-control rounded-0" formControlName="atores" />
+                            <input type="text" placeholder="Ator" name="actor" class="form-control rounded-0"
+                                formControlName="atores" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="País de origem" name="original_country" class="form-control rounded-0" formControlName="pais" />
+                            <input type="text" placeholder="País de origem" name="original_country"
+                                class="form-control rounded-0" formControlName="pais" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Idioma" name="language" class="form-control rounded-0" formControlName="idioma" />
+                            <input type="text" placeholder="Idioma" name="language" class="form-control rounded-0"
+                                formControlName="idioma" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="number" placeholder="Classificação etária" name="Advisory-rating" class="form-control rounded-0" formControlName="classificacao" />
+                            <input type="number" placeholder="Classificação etária" name="Advisory-rating"
+                                class="form-control rounded-0" formControlName="classificacao" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="number" placeholder="IMDB" name="imdb" class="form-control rounded-0" formControlName="imdb" />
+                            <input type="number" placeholder="IMDB" name="imdb" class="form-control rounded-0"
+                                formControlName="imdb" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="checkbox" class=" rounded-0" id="em_cartaz" name="imdb" formControlName="em_cartaz">
+                            <input type="checkbox" class=" rounded-0" id="em_cartaz" name="imdb"
+                                formControlName="em_cartaz">
                             <label class="form-check-label" for="em_cartaz">Em cartaz</label>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5"></div>
                 </section>
                 <section class="row justify-content-center">
-                    <div class="col-12">
-                        <h6 class="subtitle font-weight-bold">Arquivos de mídia</h6>
-                    </div> 
-                    <div class="w-100"></div>
-                    <div class="col-12 col-md-6 pr-md-5">
-                        <div class="form-group">
-                            <small class="font-weight-bold">Poster (resolução recomendada: )</small>
-                            <input type="file" name="poster" id="poster" class="rounded-0 file-input" formControlName="poster" />
-                            <label for="poster">
-                                <span class="py-2 px-2 mr-2">Escolher arquivo</span>
-                                <small>
-                                    Nenhum arquivo selecionado
-                                </small>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 pl-md-5">
-                        <div class="form-group">
-                            <img />
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 pr-md-5">
-                        <div class="form-group">
-                            <small class="font-weight-bold">Banner (resolução recomendada: )</small>
-                            <input type="file" name="banner" id="banner" class="rounded-0 file-input" formControlName="banner" />
-                            <label for="banner">
-                                <span class="py-2 px-2 mr-2">Escolher arquivo</span>
-                                <small>
-                                    Nenhum arquivo selecionado
-                                </small>
-                            </label>
-                        </div>
-                    </div>
+                   
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
                             <img />
@@ -127,7 +107,8 @@
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <input type="text" placeholder="Link do trailer" name="trailer_url" class="form-control rounded-0" formControlName="trailer_url" />
+                            <input type="text" placeholder="Link do trailer" name="trailer_url"
+                                class="form-control rounded-0" formControlName="trailer_url" />
                         </div>
                     </div>
                 </section>
