--- a/ingresso-ng/src/app/pages/movie-detail/movie-date-carousel/movie-date-carousel.component.css
+++ b/ingresso-ng/src/app/pages/movie-detail/movie-date-carousel/movie-date-carousel.component.css
@@ -1,4 +1,4 @@
-.session-date-item:active {
+.session-date-item--active {
     border-bottom: solid 2px #FFF;
 }
 
@@ -18,16 +18,4 @@
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-}
-
-.session {
-    border-width: 2px!important;
-    border-color: #b3414b!important;
-    text-decoration: none;
-}
-
-.session:hover {
-    color: #b3414b;
-    transform: translateX(10px);
-    transition: all 0.2s ease;
 }
