--- a/ingresso-ng/src/app/components/movie-poster/movie-poster.component.css
+++ b/ingresso-ng/src/app/components/movie-poster/movie-poster.component.css
@@ -1,3 +1,11 @@
+.poster {
+    height: 100%;
+}
+
+.poster a {
+    height: 100%;
+}
+
 .poster:hover {
     /* transform: scale(1.15); */
     transform: scale(1.05);
