--- a/ingresso-ng/src/app/pages/movies/movies.component.html
+++ b/ingresso-ng/src/app/pages/movies/movies.component.html
@@ -1,6 +1,6 @@
 
 <main class="container-fluid">
     <app-banner></app-banner>
-    <app-movie-list title="Em breve" [movies]="movies"></app-movie-list>
-    <app-movie-list title="Em cartaz" [movies]="movies"></app-movie-list>
+    <app-movie-list title="Em cartaz" [movies]="releasedMovies"></app-movie-list>
+    <app-movie-list title="Em breve" [movies]="moviesToRelease"></app-movie-list>
 </main>
