--- a/ingresso-ng/src/app/pages/session-form/edit-session/edit-session.component.html
+++ b/ingresso-ng/src/app/pages/session-form/edit-session/edit-session.component.html
@@ -29,8 +29,8 @@
                            
                         </div>
                         <div class="col-2">
-                            <button type="submit" class="btn w-100 raised-button" (click)="editar(sessao.id)" >Editar Sala</button>
-                            <button type="submit" class="btn w-100 raised-button" (click)="delete(sessao.id)" *ngIf="sessaoID">Deletar Sala</button>
+                            <button type="submit" class="btn w-100 raised-button" (click)="editar(sessao.id)" >Editar Sessão</button>
+                            <button type="submit" class="btn w-100 raised-button" (click)="delete(sessao.id)" *ngIf="sessaoID">Deletar Sessãp</button>
                           
                         </div>
                     </div>
