--- a/ingresso-ng/src/styles.css
+++ b/ingresso-ng/src/styles.css
@@ -33,6 +33,14 @@ body, html {
     padding: 0;
 }
 
+select {
+    background-color: #FFF;
+    border-radius: 5px;
+    color: #232323;
+    font-size: .9rem;
+    padding: .3rem .2rem
+}
+
 .font-arvo {
     font-family: Arvo;
 }
@@ -100,6 +108,15 @@ body, html {
 }
 
 .invalid-form {
-    border-color: #c14141;
-    box-shadow: 0px 0px 4px #c14141;
+    border-color: #cf3f49;
+    box-shadow: 0px 0px 4px #cf3f49;
+}
+
+.retangle-button {
+    display: block;
+    border: 0;
+    background: #cf3f49;
+    border-radius: 5px;
+    color: #FFF;
+    padding: .2rem 1rem;
 }
