--- a/ingresso-ng/src/app/pages/buy-ticket/ticket-seat/ticket-seat.component.html
+++ b/ingresso-ng/src/app/pages/buy-ticket/ticket-seat/ticket-seat.component.html
@@ -1,1 +1,31 @@
-<p>ticket-seat works!</p>
+<section class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <p class="mb-0 text-white">Escolha os assentos</p>
+        </div>
+    </div>
+
+    <div class="row canvas-background">
+        <div class="col-12 canvas">
+            <div class="row align-items-center" *ngFor="let letter of ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'L', 'M', 'N', 'O']">
+                <div class="col-1">
+                    <p class="mb-0 text-center">{{ letter }}</p>
+                </div>
+                <div class="col-11 text-center">
+                    <app-seat-item *ngFor="let test of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,16,17,18,19,20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]"></app-seat-item>
+                </div>
+            </div>
+        </div>
+        <div class="col-11 offset-1">
+            <div class="mx-auto screen">
+                <h5 class="mb-0 text-center text-white">Tela</h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4 align-items-center">
+        <div class="col-2 offset-7">
+            <!-- <button type="button" class="retangle-button" (click)="submit()">Proximo</button> -->
+        </div>
+    </div>
+</section>
