--- a/ingresso-ng/src/app/pages/buy-ticket/ticket-seat/seat-item/seat-item.component.css
+++ b/ingresso-ng/src/app/pages/buy-ticket/ticket-seat/seat-item/seat-item.component.css
@@ -1,6 +1,6 @@
 .seat {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    /* height: 20px; */
     display: inline-block;
     cursor: pointer;
     color: #908e8e;
@@ -10,17 +10,39 @@
     color: #908e8e;
 }
 
-.seat--available {
-    color: #22a54b
-}
 
 .seat--unavailable {
     color: #908e8e;
     cursor: default;
 }
 
+.seat--available {
+    color: #22a54b
+}
+
 .seat--available:hover {
     transition: all .2s ease;
     transform: scale(1.1);
     color: #22a54b;
+}
+
+.seat--selected {
+    color: #ff9800
+}
+
+.seat--selected:hover {
+    color: #ff9800
+}
+
+.type {
+    text-align: start;
+}
+
+.type input[type='radio'] {
+    height: 20px;
+    width: 20px;
+}
+
+.form-check-input {
+    position: relative;
 }
