front-end | Criado novo modelo de Pedido e dados de pagamento Finalizado template de pagamento Finalizado formulario de pagamento

--- a/ingresso-ng/src/styles.css
+++ b/ingresso-ng/src/styles.css
@@ -120,3 +120,8 @@ select {
     color: #FFF;
     padding: .2rem 1rem;
 }
+
+.vertical-align-center {
+    display: flex;
+    align-items: center;
+}
