--- a/ingresso-ng/src/app/pages/buy-ticket/ticket-seat/ticket-seat.component.html
+++ b/ingresso-ng/src/app/pages/buy-ticket/ticket-seat/ticket-seat.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 
-    <div class="row canvas-background mx-3" *ngIf="room">
+    <div class="row canvas-background mx-3" *ngIf="room" [@showCanvas]>
         <div class="col-12 canvas">
             <div class="row align-items-center">
                 <div class="col-2">
@@ -40,7 +40,14 @@
                     <h5 class="mb-0 text-center">{{ letter }}</h5>
                 </div>
                 <div class="col-11 text-center">
-                    <app-seat-item [position]="letter + seatPosition" [ticketType]="ticketTypes" [available]="checkIsAvailable(letter + seatPosition)" *ngFor="let seatPosition of getSeats()" (onSelect)="onSelectSeat($event)"></app-seat-item>
+                    <app-seat-item 
+                        [position]="letter + seatPosition" 
+                        [ticketType]="ticketTypes" 
+                        [available]="checkIsAvailable(letter + seatPosition)" 
+                        [selectedSeat]="checkIsSelected(letter + seatPosition)" 
+                        *ngFor="let seatPosition of getSeats()" 
+                        (onSelect)="onSelectSeat($event)">
+                    </app-seat-item>
                 </div>
             </div>
         </div>
@@ -56,8 +63,8 @@
             <h5 class="mb-0 text-white">Total: {{ getTotalPrice() | currency:'R$' }}</h5>
         </div>
 
-        <div class="col-2 offset-7">
-            <button type="button" class="retangle-button ml-auto" (click)="onSubmit()">Proximo</button>
+        <div class="col-4 offset-5">
+            <button type="button" class="retangle-button ml-auto" (click)="onSubmit()">Ir para o pagamento</button>
         </div>
     </div>
 </section>
